--- a/templates/perfil_admin.html
+++ b/templates/perfil_admin.html
@@ -20,9 +20,9 @@
     <div class="container">
         <div class="form-container">
             <form id="registration-form" action="/register" method="POST">
-                <h3>Perfil de usuario</h3>
+                <h3>Perfil de administrador</h3>
                 <div class="profile-photo-container">
-                    <img src="../static/images/user_photo.png" alt="Foto de usuario" class="profile-photo">
+                    <img src="../static/images/logo.png" alt="Foto de usuario" class="profile-photo">
                     <button type="button" class="btn edit-photo-btn">Editar</button>
                 </div>
                 <div class="input-container">
@@ -50,7 +50,7 @@
                     </div>
                 </div>
                 <div class="input-container">
-                    <label for="password"> Restablecer Contraseña</label>
+                    <label for="password">Restablecer Contraseña</label>
                     <div class="input-with-icon change-password-container">
                         <button type="button" class="btn change-password-btn" onclick="window.location.href='/templates/cambiar_contrasena.html'">🔏ㅤㅤ </button>
                     </div>
