Icono admin navbar, rutas actualizadas

--- a/templates/adminpanel.html
+++ b/templates/adminpanel.html
@@ -12,21 +12,21 @@
             <img src="../static/images/logo.png" alt="Monster Dojo">
         </div>
         <ul class="nav-items">
-            <li><a href="">Inicio</a></li>
-            <li><a href="userspanel">Usuarios</a></li>
+            <li><a href="adminpanel.html">Inicio</a></li>
+            <li><a href="userspanel.html">Usuarios</a></li>
             <li><a href="">Juegos</a></li>
             <li><a href="">Comida</a></li>
             <li><a href="">Mesas</a></li>
             <li><a href="">Reservas</a></li>
             <li><a href="">Pedidos</a></li>
             <li><a href="">Empleados</a></li>
-            <li><a href="">Cerrar Sesion</a></li>
+            <li><a href="perfil_admin.html"><i class="fa-solid fa-user-gear"></i></a></li>
         </ul>
     </nav>
     <div class="container">
         <div class="options-panel">
             <div class="option">
-                <a href="userspanel">
+                <a href="userspanel.html">
                     <i class="fa-solid fa-user"></i>
                 </a>
                 <span>Usuarios</span>
