--- a/templates/perfil_admin.html
+++ b/templates/perfil_admin.html
@@ -13,7 +13,7 @@
             <img src="../static/images/logo.png" alt="Monster Dojo">
         </div>
         <ul class="nav-items">
-            <li><a href="/templates/inicio_usuario.html">Inicio</a></li>
+            <li><a href="/templates/adminpanel.html">Inicio</a></li>
             <li><a href="/templates/inicio.html">Cerrar Sesión</a></li>
         </ul>
     </nav>
