--- a/templates/userspanel.html
+++ b/templates/userspanel.html
@@ -29,15 +29,15 @@
             <img src="../static/images/logo.png" alt="Monster Dojo">
         </div>
         <ul class="nav-items">
-            <li><a href="/">Inicio</a></li>
-            <li><a href="/usuarios">Usuarios</a></li>
+            <li><a href="adminpanel.html">Inicio</a></li>
+            <li><a href="userspanel.html">Usuarios</a></li>
             <li><a href="/juegos">Juegos</a></li>
             <li><a href="/comida">Comida</a></li>
             <li><a href="/mesas">Mesas</a></li>
             <li><a href="/reservas">Reservas</a></li>
             <li><a href="/pedidos">Pedidos</a></li>
             <li><a href="/empleados">Empleados</a></li>
-            <li><a href="/logout">Cerrar Sesion</a></li>
+            <li><a href="perfil_admin.html"><i class="fa-solid fa-user-gear"></i></a></li>
         </ul>
     </nav>
     <div class="container">
