--- a/static/css/popup_carrito.css
+++ b/static/css/popup_carrito.css
@@ -16,10 +16,10 @@ body {
 
 .popup-content {
     position: relative;
-    margin: 10% auto;
+    margin: 5% auto;
     padding: 20px;
-    width: 60%;
-    background-color: #1c1c1c;
+    width: 80%;
+    background-color: #f4f4f4;
     border-radius: 10px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
@@ -30,48 +30,71 @@ body {
     right: 20px;
     font-size: 24px;
     cursor: pointer;
-    color: #faf7e6;
+    color: #000;
 }
 
 h2 {
     margin-bottom: 20px;
-    color: #faf7e6;
+    color: #333;
 }
 
 .remove-all {
     float: right;
     color: red;
     text-decoration: none;
+    margin-bottom: 10px;
+}
+
+.cart-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 10px;
+}
+
+.cart-table th, .cart-table td {
+    border: 1px solid #ddd;
+    padding: 10px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.cart-table th {
+    background-color: #192847;
+    color: #fff;
 }
 
 .cart-item {
+    vertical-align: middle;
+}
+
+.item-details {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    border-bottom: 1px solid #ddd;
-    padding: 10px 0;
 }
 
 .item-image {
     width: 50px;
     height: 50px;
     object-fit: cover;
+    margin-right: 10px;
 }
 
-.item-details {
-    flex: 2;
-    padding-left: 10px;
+.item-info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
-.item-details h3 {
+.item-info h3 {
     margin: 0;
-    font-size: 18px;
-    color: #faf7e6;
+    font-size: 16px;
+    color: #333;
 }
 
-.item-details p {
+.item-info p {
     margin: 5px 0;
-    color: #faf7e6;
+    font-size: 14px;
+    color: #666;
 }
 
 .veg-icon {
@@ -84,11 +107,13 @@ h2 {
 
 .item-quantity {
     display: flex;
+    justify-content: center;
     align-items: center;
 }
 
 .quantity-btn {
-    background-color: #ddd;
+    background-color: #192847;
+    color: #fff;
     border: none;
     padding: 5px 10px;
     cursor: pointer;
@@ -97,44 +122,36 @@ h2 {
 }
 
 .quantity {
-    width: 20px;
+    width: 30px;
     text-align: center;
-}
-
-.item-price {
-    text-align: right;
 }
 
 .item-price p {
     margin: 0;
-    font-size: 18px;
-    color: #faf7e6;
-}
-
-.save-for-later, .remove {
-    display: block;
-    color: blue;
-    text-decoration: none;
-    font-size: 14px;
-    margin-top: 5px;
+    font-size: 16px;
+    color: #333;
 }
 
 .remove {
-    color: red;
+    color: rgb(165, 14, 14);
+    text-decoration: none;
+    font-size: 14px;
+    cursor: pointer;
 }
 
 .subtotal {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 20px 0;
-    border-top: 1px solid #faf7e6;
+    border-top: 1px solid #ddd;
     margin-top: 20px;
 }
 
 .subtotal p {
     margin: 0;
     font-size: 18px;
-    color: #faf7e6;
+    color: #333;
 }
 
 .items-count {
@@ -143,22 +160,29 @@ h2 {
 
 .total-price {
     font-size: 24px;
-    color: #faf7e6;
+    color: #333;
 }
 
 .checkout-btn {
-    display: block;
-    width: 100%;
-    padding: 10px;
+    padding: 10px 20px;
     background-color: #192847;
     color: #fff;
     font-size: 18px;
     cursor: pointer;
     text-align: center;
-    border-color: #faf7e6;
-    border-radius: 20px;
+    border: 3px solid #fff; /* Borde blanco grueso */
+    border-radius: 30px;
+    float: right;
+    margin-top: 10px;
 }
 
 .checkout-btn:hover {
     background-color: #d48600;
+    color: #000;
+}
+
+.button-container {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 20px;
 }
