catproductos, editar/ver perfil - Admin/user

--- a/templates/inicio_usuario.html
+++ b/templates/inicio_usuario.html
@@ -27,14 +27,14 @@
             <span class="fas fa-bars"></span>
         </button>
         <div class="navbar-right">
-            <a href="/">Home</a>
+            <a href="/inicio_usuario">Home</a>
             <a href="#about">Sobre Nosotros</a>
             <a href="#menu">Menu</a>
             <a href="#order">Ubicación</a>
             <a href="">Productos</a>
             <a href="">Reservas</a>
             <a href="">Pedidos</a>
-            <a href="/templates/perfil_usuario.html"><i class="fas fa-user"></i></a>
+            <a href="/perfil_user"><i class="fas fa-user"></i></a>
         </div>
     </div>
     
