--- a/templates/RegProducto.html
+++ b/templates/RegProducto.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Registrar Producto</title>
-    <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" href="../static/css/userspanel.css">
+    <link rel="stylesheet" href="../static/css/popup.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
